mvp thankyou page settings

--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
@@ -9,32 +9,36 @@
     
     <section>
         <div id="main-section" class="container-fluid">
-            <div class="row">        
-                <div class="col-md-12 col-sm-12 col-xs-12 MarginTop">        
-                    <h1>Muito obrigado por participar do nosso teste! </h1>
+            <div class="row imgTitle img-responsive">        
+                <div class="col-md-1 col-sm-1 col-xs-1"></div>
+                <div class="col-md-10 col-sm-10 col-xs-1 MarginTop">  
+                    <h1 class="titleStyle">Muito obrigado por participar do nosso teste! </h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 col-sm-12 col-xs-12 MarginTop">
-                    <h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>  
+                <div class="col-md-1 col-sm-1 col-xs-1"></div>
+                <div class="col-md-10 col-sm-10 col-xs-1 MarginTop">
+                    <h3 class="textAjust">Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>  
                     <br/>    
-                    <h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
+                    <h3 class="textAjust">P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
                 </div>
             </div>
 
-            <div class="row MarginTop alignSection">
-                <div id="gif" class="col-lg-6 col-md-12 col-sm-12 col-xs-12 MarginTop"> 		
-                    <img src="../../../assets/images/Jerry Maguire Money GIF-downsized_large.gif">
+            <div class="row">  
+                <div class="col-md-1 col-sm-1 col-xs-1"></div>
+                <div class="col-md-5 col-sm-10 col-xs-10 MarginTop"> 		
+                    <img src="../../../assets/images/Jerry Maguire Money GIF-downsized_large.gif" id="gif">
                 </div> 
 
-                <div id="msgScore" class="col-lg-6 col-md-12 col-sm-12 col-xs-12 MarginTop">
-                    <h2>Seu resultado foi:</h2>                   
+                <div id="msgScore" class="col-md-5 col-sm-10 col-xs-10 MarginTop">
+                    <h3 class="ScoreTitle">Seu resultado foi:</h3>                   
                     <label id="scoreMessage">{{message}}</label>
                 </div>
             </div>    
 
             <div class="row MarginTop">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 MarginTop"> 
+                <div class="col-md-1 col-sm-1 col-xs-1"></div>    
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 MarginTop"> 
                     <a href="https://hrtechsolutions.com.br/" id="backHomePage">Ir para a homepage</a>
                 </div>
             </div>  
