--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.css
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.css
@@ -16,33 +16,29 @@ body{
 	width: 180px;
 }
 
-h1{
+.titleStyle{
 	font-family: 'Montserrat', sans-serif;
 	font-weight: bolder;
-	color: #00cca3;
-	font-size: 1.5em;
+	color: white;
+	font-size: 2em;
 	line-height: 30px;
 	text-align: left;
+	padding-bottom: 5%;
 }
 
-h2{
-	font-family: 'Raleway', sans-serif;
-	color: #000;
-	font-size: 1.3em; 
-	line-height: 30px;
-	text-align: left;	  
-}
-
-h3{
+.textAjust{
 	font-family: 'Raleway', sans-serif;
 	font-size: 1.4em;
 	line-height: 25px;	
-	text-align: left;	
+	text-align: left;
+	text-justify: distribute;	
 }
 
 #gif{
-	float: left;
+	width: 100%;
+	height: 100%;
 	flex-shrink: 1;
+	vertical-align: middle;
 }
 
 #backHomePage{
@@ -64,16 +60,19 @@ section{
 	margin-top: 5%;
 }
 
+.ScoreTitle{
+	font-size: 1em;
+}
+
+#scoreMessage{
+	font-size: .9em;
+}
+
 #msgScore{
-	width: 100%;
+	width: 90%;
 	border: solid 1px lightgrey;
 	border-radius: 5px;
 	padding: 10px; 
-}
-
-.alignSection{
-	display: flex;
-	flex-direction: row;
 }
 
 .confLogoFooter1{
@@ -94,6 +93,10 @@ section{
 	padding-bottom: 20px;
 }
 
+.imgTitle{
+	background-image: url("../../../assets/images/Thank-You-Page-Background.jpg");
+	background-position: center;
+}
 /*Mobile Style*/
 
 @media only screen and (min-device-width: 768px){
