--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
@@ -30,12 +30,12 @@
                 
                     <div class="container thanks-title">
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-md-7">
                                 Pronto! Agradecemos pela participação e até em breve.
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 <button class="btn btn-sucess" type="submit" class="thanks-btn">
-                                    Enviar
+                                        Ver Resultado
                                 </button>
                             </div>
                         </div>
