--- a/mvp/client/src/app/radio-group/radio-group/radio-group.component.css
+++ b/mvp/client/src/app/radio-group/radio-group/radio-group.component.css
@@ -3,12 +3,17 @@
 }
 .question{
     vertical-align: middle;
+    font-size: 1.3em;
 }
 .options{
     padding: 20px;
     box-shadow: 0 0 23px -5px black;
     border: none;
     border-radius: 5px;
+    font-size: 1.2em;
+}
+.question.style{
+    font-size: 1.3em;
 }
 
 @media only screen and (max-device-width: 768px){
@@ -18,7 +23,7 @@
     }
     
     h2 {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
     .options{
         margin-top: 5%;
