Corrections of break line problems

--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="container-questions">
-        <form (submit)="submiteTechnicalTest($event)" class="w-100">
+        <form (submit)="submiteTechnicalTest($event)" class="w-100 h-100">
             <app-radio-group *ngFor="let question of questionList.questions; let i = index" 
                 [question]="question"  
                 [number]="i+1"
