--- a/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
+++ b/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
@@ -1,5 +1,5 @@
 <div class="{{ visible ? 'd-flex' : 'd-none'}} questions">
-    <div class="row">
+    <div class="row w-100">
         <div class="question col-md-6">
             <h2 class="multi-lines-text">{{ number + ') ' + question.question }}</h2>
             <div [class]="question.style"></div>
