--- a/mvp/client/src/styles.css
+++ b/mvp/client/src/styles.css
@@ -17,8 +17,8 @@ a.text-primary:hover {
   background-image: url('assets/images/img-cadencia.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;	
-  width: 370px;
+  background-size: contain;	
+  width: 100%;
   height: 140px;
   margin-bottom: 5px;
 }
