--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
@@ -8,7 +8,7 @@
 
     
     <section>
-        <div id="main-section" class="container-fluid">
+        <div id="main-section">
             <div class="row imgTitle img-responsive">        
                 <div class="col-md-1 col-sm-1 col-xs-1"></div>
                 <div class="col-md-10 col-sm-10 col-xs-1 MarginTop">  
