--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -18,14 +18,14 @@
 }
 
 .nav {
-    font-size: 12px;
+    font-size: 1em;;
     margin-top: 1% !important;    
 }
 
 #navBar{
 	margin-left: 10%;
 	margin-right: 10%;
-	margin-top: 1.5%;
+	margin-top: 0;
     margin-bottom: 0;		
 	min-height: 0;	
 	border: none;
@@ -49,7 +49,6 @@
     padding: 0;
     font-size: 20px;
 	line-height: 20px;
-    margin-bottom: 20px;	
 }
 
 .navbar-default {
@@ -89,15 +88,11 @@
 }
 
 #main-title{
-	margin-top:1%;
-	margin-bottom: 20%;
-	margin-left: 7%;
-	margin-right: 10%;
+	margin: 0;
 }
 
 #textContent{
-	margin-left: 7%;
-	margin-right: 10%;	
+	margin: 0;
 }
 
 .colorWord{
@@ -134,7 +129,7 @@
     padding-top: 3%;
     padding-left: 5%;
 	padding-right: 5%;
-	margin-top: 5%;
+	margin-top: 2%;
 }
 
 .btnTest:hover {
@@ -161,21 +156,23 @@
 
 #imgBtn{
 	width: 50px;
+	padding-left: 7px;
 }
 
 h1{
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight: bolder;
 	color: #00cca3;
-	font-size: 1.6em;
+	font-size: 1.7em;
 	line-height: 30px;
 	margin-left: 0;
+	margin-top: 0;
 }
 
 h2{
 	font-family: 'Raleway', sans-serif;
 	color: #FFF;
-	font-size: 1.4em; 
+	font-size: 1.2em; 
 	line-height: 30px;
 	margin-left: 0;	  
 }
@@ -187,16 +184,18 @@ h2{
 	line-height: 40px;	
 	color: #000 !important;
 	margin-left: 0!important;
+	margin-top: 10px;
 }
 
 h3{
 	font-family: 'Raleway', sans-serif;
     font-size:18px;
-	line-height: 22px;	
+	line-height: 27px;	
 	margin-left: 0;
 	margin-right: 0;
 	margin-bottom: 5%;
 }
+
 
 .DivVerde{
 	color: #00cca3;
@@ -216,6 +215,11 @@ h3{
 	margin-right: 0;
 	margin-top:30px;
 	margin-bottom: 20px;
+}
+
+#OQueFazemos{
+	background-color: #bfbfbf1a;
+	margin-top: 10px;
 }
 
 #formQuestions{
@@ -262,6 +266,7 @@ h3{
 .ajustText{
 	padding-left: 3%;
 	padding-right: 3%;
+	margin-top: 8%;
 }
 
 #confheader{
@@ -294,8 +299,9 @@ h3{
 
 @media only screen and (min-device-width: 768px){
 	#logo{
-	    width: 120px;
-	    margin-top: 0;
+	    width: 150px;
+		margin-top: 10%;
+		margin-bottom: 10%;	
 	}
 	
 	#imgBackground{
@@ -303,8 +309,21 @@ h3{
 		padding-top: 5%;
 	}
 
-	.navbar-nav{
-		float: right;
+	.nav{
+		font-size: 1.3em;
+	}
+
+	#navBar{
+		margin-top: 3%;
+		margin-bottom: 3%;
+	}
+
+	#menuItens {
+		font-size: 12px;
+		position: absolute;
+		right: 10%;
+		top: 8%;
+		margin-bottom: 3%;
 	}
 
 	.itemMenu{
@@ -313,43 +332,49 @@ h3{
 		text-transform: uppercase;
 	}
 
-	#menuItens{
-        font-size: 12px;
-        position: absolute;
-        right: 0;
-        top: 5%;		
-		margin-bottom: 1%;
-	}
-
 	#main-title{
 		margin-bottom: 7%;
 	}
 
 	h1{
-        font-size: 3em;
-        line-height: 45px;
+        font-size: 2.8em;
+		line-height: 45px;
 	}
 
 	h2{
-		font-size:2em;
+		font-size: 1.8em;
 	}
 	
 	h3{
-		font-size:16px;
+		font-size:1.5em;
+		margin-bottom: 5%;
+	}
+
+	p{
+		margin-bottom: 8%;
+	}
+
+	.titulo{
+		margin-top: 8%;
 	}
 
 	#imgQuemSomos{
-		width: 100%;
+		max-width: 100%;
+		max-height: 100%;
+		margin: 0;
 	}
 
 	#QuemSomos{
-		margin-top: 5%;
+		margin-top: 0;
+		margin-right: 0;
+	}
+
+	.ajustText{
+		padding: 0;
 	}
 
 	#OQueFazemos{
-		margin-top: 5%;
-		padding-top: 5%;
-		padding-bottom: 5%;
+		margin-top: 0;
 		background-color: #f5f5f5;
 	}
 
