--- a/mvp/client/src/app/radio-group/radio-group/radio-group.component.css
+++ b/mvp/client/src/app/radio-group/radio-group/radio-group.component.css
@@ -9,6 +9,7 @@ h2{
 .question{
     vertical-align: middle;
     width: 100%;
+
 }
 .options{
     padding: 20px;
@@ -29,6 +30,7 @@ h2{
     }
     .options{
         margin-top: 5%;
+        margin-left: 5%;
     }    
 }
 
