--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
@@ -33,6 +33,9 @@
                 <div id="msgScore" class="col-md-5 col-sm-10 col-xs-10 MarginTop">
                     <h3 class="ScoreTitle">Seu resultado foi:</h3>                   
                     <label id="scoreMessage">{{message}}</label>
+                    <label id="MessagePreVendas">{{messageAreaPreVendas}}</label>
+                    <label id="MessageVendas">{{messageAreaVendas}}</label>
+                    <label id="MessageTecnicas">{{messageTecnicas}}</label>
                 </div>
             </div>    
 
