--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -23,7 +23,7 @@
 }
 
 #navBar{
-	margin-left: 10%;
+	margin-left: 12px;
 	margin-right: 10%;
 	margin-top: 0;
     margin-bottom: 0;		
@@ -312,6 +312,7 @@ h3{
 	}
 
 	#navBar{
+		margin-left: 10%;
 		margin-top: 3%;
 		margin-bottom: 3%;
 	}
