--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
@@ -32,10 +32,8 @@
 
                 <div id="msgScore" class="col-md-5 col-sm-10 col-xs-10 MarginTop">
                     <h3 class="ScoreTitle">Seu resultado foi:</h3>                   
-                    <label id="scoreMessage">{{message}}</label>
-                    <label id="MessagePreVendas">{{messageAreaPreVendas}}</label>
-                    <label id="MessageVendas">{{messageAreaVendas}}</label>
-                    <label id="MessageTecnicas">{{messageTecnicas}}</label>
+                    <label id="scoreMessage">{{score.message}}</label>
+                    <label *ngFor="let area of score.areas">{{area.message}}</label>
                 </div>
             </div>    
 
