--- a/mvp/client/src/app/radio/radio/radio.component.css
+++ b/mvp/client/src/app/radio/radio/radio.component.css
@@ -7,5 +7,9 @@
     margin-right: 3%;
     margin-top: 1.7%;
     margin-bottom: 1.7%;
-    border: none;
+    border: 1px solid transparent;
+}
+
+.confLabel:hover{
+    border: 1px solid cadetblue;
 }
