--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.scss
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.scss
@@ -73,6 +73,7 @@ section{
 	border: solid 1px lightgrey;
 	border-radius: 5px;
 	padding: 10px; 
+	margin: 15px auto;
 }
 
 .confLogoFooter1{
@@ -87,7 +88,7 @@ section{
 }
 
 .main-footer{
-	background-color: #bfbfbf1a;
+	background-color: #bfbfbf;
 	width: 100%;
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -136,4 +137,91 @@ section{
 		flex-direction: column;
 	}
 
+}
+
+dd{
+  margin-bottom: 15px;
+}
+
+dl {
+  display: flex;
+  background-color: white;
+  flex-direction: column;
+  width: 100%;
+  max-width: 700px;
+  position: relative;
+  padding: 20px;
+}
+
+dt {
+  align-self: flex-start;
+  width: 100%;
+  font-weight: 700;
+  display: block;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.text {
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  height: 40px;
+  width: 130px;
+  background-color: white;
+  position: absolute;
+  left: 0;
+  justify-content: flex-end;
+}
+
+.percentage {
+  font-size: .8em;
+  line-height: 1;
+  text-transform: uppercase;
+  width: 100%;
+  height: 40px;
+  background: repeating-linear-gradient(
+  to right,
+  #ddd,
+  #ddd 1px,
+  #fff 1px,
+  #fff 5%
+);
+  
+&:after {
+    content: "";
+    display: block;
+    background-color: #3d9970;
+    width: 50px;
+    margin-bottom: 10px;
+    height: 90%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: background-color .3s ease;
+    cursor: pointer;
+  }
+  &:hover,
+  &:focus {
+    &:after {
+       background-color: #aaa; 
+    }
+  }
+}
+
+@for $i from 1 through 100 {
+  .percentage-#{$i} {
+    &:after {
+      $value: ($i * 1%);
+      width: $value;
+    }
+  }
+}
+
+html, body {
+  height: 500px;
+  font-family: "fira-sans-2",sans-serif;
+  color: #333;
 }
