--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
@@ -1,4 +1,4 @@
-<div class="container w-100 h-100 d-block">
+<div id="TestBackground" class="container w-70 h-80 d-block">
     <div class="top-container">
         <div class="progress-container">
             <app-progress-bar [position]="position" [total]="questionList.questions.length"></app-progress-bar>   
@@ -41,5 +41,4 @@
             </ng-template>
         </form>
     </div>
-
 </div>
