--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.css
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.css
@@ -6,7 +6,7 @@
 #TestBackground{
     max-width: 80%;
     padding: 3%;
-    margin: 5% auto;
+    margin: 4% auto;
     border-radius: 10px;
     box-shadow: 0 0 100px 15px rgba(0, 0, 0, 0.9);
     background-color: rgba(255, 255, 255, 0.9);
@@ -70,6 +70,7 @@
     box-shadow: inset 0px 0px 21px -7px black;
     font-size:  16px;
     display:  inline-block;
+    background-color: white;
 }
 
 .thanks-btn{
