--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="imgBackground" style="background-image:url('../../../assets/images/background5.jpg')">
     <div id="TestBackground" class="container w-70 h-70 d-block">
         <div class="top-container">
             <div class="progress-container">
