--- a/mvp/client/src/app/app.component.html
+++ b/mvp/client/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-header></app-header>
-<div id="imgBackground" style="background-image:url('../../../assets/images/background5.jpg'); 
-background-size:cover; 
-padding-top:4%; 
-padding-bottom:16%">
+<div>
   <router-outlet></router-outlet>
 </div>
